--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
     "egg": "^2.21.0",
     "egg-scripts": "^2.11.0",
     "egg-static": "^2.2.0",
+    "isomorphic-unfetch": "^3.0.0",
+    "node-fetch": "^2.6.0",
+    "qs": "^6.9.1",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-router-dom": "^5.0.0",
+    "unfetch": "^4.1.0",
     "yk-cli": "^2.6.1",
     "ykfe-utils": "^2.0.2"
   },
