--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ssr-with-js",
   "version": "2.1.5",
   "dependencies": {
+    "antd": "^3.25.2",
     "egg": "^2.21.0",
     "egg-scripts": "^2.11.0",
     "egg-static": "^2.2.0",
